*
* 0.2.13
*

- Implemented central (stored on server) agent configs
- Agent ported to IPSO
- Added installer command line options for unattended installation of
  Windows agent
- New MIBs added: S5-ETH-MULTISEG-TOPOLOGY-MIB
- Server startup and shutdown procedures improved
- Added detection of lost database connections and automatic reconnect
- Native operating system read/write locks used whenever possible
- Added possibility to use alarm message text in actions (if action executed by
  the same event processing rule as alarm)
- Windows binaries built against OpenSSL 0.9.8b
- Windows console:
	- DCI history data viewer improved
	- Graphs improved
- Implemented parameter UPS.Load for BCM/XCP compatible devices
- Fixed issues: #4, #20, #47, #67, #79, #80, #91, #92, #93, #94, #95, #96, #97,
                #98, #99, #100, #103


*
* 0.2.12
*

- Added possibility to define complicated conditions using "condition" objects
- Implemented RADIUS authentication for NetXMS users
- Added support for compressed MIB files
- New MIBs added: ENTITY-MIB
- Added support for DRBD device monitoring
- Windows console: Event editor improved
- UPS subagent:
	- Redesigned to improve stability and performance
	- Added parameter UPS.OnlineStatus
	- Fixed problem with occasional APC UPS disconnections
- Fixed issues: #89


*
* 0.2.11
*

- Basic network maps implemented
- Non-standart (other than 4701) ports now can be used for client-server
  communications
- Copy/move/delete of saved desktop configurations implemented
- SNMP walk function improved
- Implemented "User must change password on next logon" function
- UPS subagent: added support for BSMXCP protocol (used by Powerware,
  HP and Compaq UPSes)
- Fixed Alarm Viewer crash
- Fixed issues: #28, #34, #52, #82, #83, #84, #85, #86, #87, #88


*
* 0.2.10
*

- Web interface redesigned
- Added OpenBSD platform subagent
- Added UPS monitoring subagent
- Netscreen (now Juniper) MIBs added
- Windows console: graphs improved