@@ -1,4 +1,33 @@
 *************
+* 45 ==> 46 *
+*************
+
+- Object tool "Switch FDB" updated:
+      UPDATE object_tools_table_columns SET col_format=5 WHERE tool_id=5 AND col_number=1
+- New OID to type translations added:
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (2,'.1.3.6.1.4.1.45.3.26.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (3,'.1.3.6.1.4.1.45.3.30.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (4,'.1.3.6.1.4.1.45.3.31.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (5,'.1.3.6.1.4.1.45.3.32.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (6,'.1.3.6.1.4.1.45.3.33.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (7,'.1.3.6.1.4.1.45.3.34.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (8,'.1.3.6.1.4.1.45.3.35.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (9,'.1.3.6.1.4.1.45.3.36.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (10,'.1.3.6.1.4.1.45.3.40.*',3,0)
+	   INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+	      VALUES (11,'.1.3.6.1.4.1.45.3.61.*',3,0)
+
+
+*************
 * 44 ==> 45 *
 *************
 
