@@ -212,3 +212,23 @@ INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
    VALUES (0,'.1.3.6.1.4.1.2272.*',NODE_TYPE_NORTEL_ACCELAR,0);
 INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
    VALUES (1,'.1.3.6.1.4.1.3224.1.*',NODE_TYPE_NETSCREEN,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (2,'.1.3.6.1.4.1.45.3.26.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (3,'.1.3.6.1.4.1.45.3.30.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (4,'.1.3.6.1.4.1.45.3.31.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (5,'.1.3.6.1.4.1.45.3.32.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (6,'.1.3.6.1.4.1.45.3.33.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (7,'.1.3.6.1.4.1.45.3.34.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (8,'.1.3.6.1.4.1.45.3.35.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (9,'.1.3.6.1.4.1.45.3.36.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (10,'.1.3.6.1.4.1.45.3.40.*',NODE_TYPE_NORTEL_BAYSTACK,0);
+INSERT INTO oid_to_type (pair_id,snmp_oid,node_type,node_flags)
+   VALUES (11,'.1.3.6.1.4.1.45.3.61.*',NODE_TYPE_NORTEL_BAYSTACK,0);
